fix overflow

--- a/under3F/under3f.css
+++ b/under3F/under3f.css
@@ -5,6 +5,7 @@
       display: flex;
       justify-content:center;
       align-items:center;
+      overflow: hidden;
 }
 .caculator{
       width: 350px;
@@ -17,6 +18,7 @@
       height: 109px;
       background-color:#031A36;
       border-radius: 20px 20px 0 0;
+      overflow: hidden;
      
 }
 .header p{
@@ -29,6 +31,7 @@
       margin: 0;
       position: relative;
       font: Roboto;
+      overflow: hidden;
    
 }
 .header .process{
